@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Text_Editor.cxx,v 1.9.2.18 2004/04/11 04:38:58 easysw Exp $"
+// "$Id: Fl_Text_Editor.cxx,v 1.9.2.19 2004/05/26 02:42:10 easysw Exp $"
 //
 // Copyright 2001-2004 by Bill Spitzak and others.
 // Original code Copyright Mark Edel.  Permission to distribute under
@@ -451,15 +451,13 @@ int Fl_Text_Editor::handle(int event) {
   switch (event) {
     case FL_FOCUS:
       show_cursor(mCursorOn); // redraws the cursor
-      if (buffer()->primary_selection()->start() !=
-          buffer()->primary_selection()->end()) redraw(); // Redraw selections...
+      if (buffer()->selected()) redraw(); // Redraw selections...
       Fl::focus(this);
       return 1;
 
     case FL_UNFOCUS:
       show_cursor(mCursorOn); // redraws the cursor
-      if (buffer()->primary_selection()->start() !=
-          buffer()->primary_selection()->end()) redraw(); // Redraw selections...
+      if (buffer()->selected()) redraw(); // Redraw selections...
     case FL_HIDE:
       if (when() & FL_WHEN_RELEASE) maybe_do_callback();
       return 1;
@@ -490,5 +488,5 @@ int Fl_Text_Editor::handle(int event) {
 }
 
 //
-// End of "$Id: Fl_Text_Editor.cxx,v 1.9.2.18 2004/04/11 04:38:58 easysw Exp $".
+// End of "$Id: Fl_Text_Editor.cxx,v 1.9.2.19 2004/05/26 02:42:10 easysw Exp $".
 //
