@@ -1,6 +1,10 @@
 CHANGES IN FLTK 1.1.5rc2
 
 	- Documentation updates (STR #365)
+	- The Fl_Text_Display widget did not redraw selections
+	  when focus changed (STR #390)
+	- The plastic background image is now less contrasty
+	  (STR #394)
 	- Fl_Scroll now uses a full redraw when the scheme is
 	  set to plastic and the box type is a frame (STR #205)
 	- Fl_Window::resize() did not work properly with KDE 3.2
